Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9739

Assertion `m_status == DA_ERROR || m_status == DA_OK' failed in Diagnostics_area::message() ; connect.xml* tests fail in buildbot

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1(EOL)
    • 10.1.13
    • None
    • Current post-10.1.12 8c2fd5537b1029a514591f622674f1ceb04fa67e, pre-10.2.0 dc08ccab422098d2466fa342d577f03c941a4ffc
    • 10.1.13

    Description

      install soname 'ha_connect';
       
      create table t1 (i int) engine=Connect table_type=XML;
      select * from information_schema.tables where create_options like '%table_type=XML%';
      

      The problem happens with CONNECT tables if the XML file does not exist upon the query from I_S.

      Stack trace from 10.1 commit 8c2fd5537b1029a514591f622674f1ceb04fa67e

      2016-03-15 23:40:32 140426018372352 [Note] CONNECT: Version 1.04.0005 January 24, 2016
      /bld/10.1/mysql-test/var/mysqld.1/data/./test/t1.xml:1: parser error : Document is empty
       
      ^
      mysqld: /src/10.1/sql/sql_error.h:705: const char* Diagnostics_area::message() const: Assertion `m_status == DA_ERROR || m_status == DA_OK' failed.
      160315 23:40:32 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007fb778c441d2 in __assert_fail () from /lib64/libc.so.6
      #8  0x000055d330d4ac53 in Diagnostics_area::message (this=0x7fb774bce8c8) at /src/10.1/sql/sql_error.h:705
      #9  0x000055d330e924b5 in get_schema_tables_record (thd=0x7fb774bc9af0, tables=0x7fb76ab2fcc8, table=0x7fb76f4b4088, res=false, db_name=0x7fb76f458e50, table_name=0x7fb76aae3db0) at /src/10.1/sql/sql_show.cc:5156
      #10 0x000055d330e8f469 in fill_schema_table_by_open (thd=0x7fb774bc9af0, is_show_fields_or_keys=false, table=0x7fb76f4b4088, schema_table=0x55d331ec77a0 <schema_tables+1920>, orig_db_name=0x7fb76f458e50, orig_table_name=0x7fb76aae3db0, open_tables_state_backup=0x7fb77af10b10, can_deadlock=false) at /src/10.1/sql/sql_show.cc:4194
      #11 0x000055d330e9099b in get_all_tables (thd=0x7fb774bc9af0, tables=0x7fb76f4530f8, cond=0x7fb76f453950) at /src/10.1/sql/sql_show.cc:4781
      #12 0x000055d330e9f50c in get_schema_tables_result (join=0x7fb76f455370, executed_place=PROCESSED_BY_JOIN_EXEC) at /src/10.1/sql/sql_show.cc:8111
      #13 0x000055d330e4086e in JOIN::exec_inner (this=0x7fb76f455370) at /src/10.1/sql/sql_select.cc:2670
      #14 0x000055d330e3ff17 in JOIN::exec (this=0x7fb76f455370) at /src/10.1/sql/sql_select.cc:2518
      #15 0x000055d330e434ca in mysql_select (thd=0x7fb774bc9af0, rref_pointer_array=0x7fb774bcde80, tables=0x7fb76f4530f8, wild_num=1, fields=..., conds=0x7fb76f453950, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2684619520, result=0x7fb76f455350, unit=0x7fb774bcd508, select_lex=0x7fb774bcdc08) at /src/10.1/sql/sql_select.cc:3451
      #16 0x000055d330e38f6f in handle_select (thd=0x7fb774bc9af0, lex=0x7fb774bcd440, result=0x7fb76f455350, setup_tables_done_option=0) at /src/10.1/sql/sql_select.cc:384
      #17 0x000055d330e0929a in execute_sqlcom_select (thd=0x7fb774bc9af0, all_tables=0x7fb76f4530f8) at /src/10.1/sql/sql_parse.cc:5936
      #18 0x000055d330dff076 in mysql_execute_command (thd=0x7fb774bc9af0) at /src/10.1/sql/sql_parse.cc:2962
      #19 0x000055d330e0c8e2 in mysql_parse (thd=0x7fb774bc9af0, rawbuf=0x7fb76f452e88 "select * from information_schema.tables where create_options like '%table_type=XML%'", length=84, parser_state=0x7fb77af125e0) at /src/10.1/sql/sql_parse.cc:7336
      #20 0x000055d330dfb2dd in dispatch_command (command=COM_QUERY, thd=0x7fb774bc9af0, packet=0x7fb773dc97f1 "select * from information_schema.tables where create_options like '%table_type=XML%'", packet_length=84) at /src/10.1/sql/sql_parse.cc:1488
      #21 0x000055d330dfa00f in do_command (thd=0x7fb774bc9af0) at /src/10.1/sql/sql_parse.cc:1109
      #22 0x000055d330f2fc38 in do_handle_one_connection (thd_arg=0x7fb774bc9af0) at /src/10.1/sql/sql_connect.cc:1349
      #23 0x000055d330f2f99c in handle_one_connection (arg=0x7fb774bc9af0) at /src/10.1/sql/sql_connect.cc:1261
      #24 0x000055d331637f4a in pfs_spawn_thread (arg=0x7fb7737b0bf0) at /src/10.1/storage/perfschema/pfs.cc:1860
      #25 0x00007fb77ab8d0a4 in start_thread () from /lib64/libpthread.so.0
      #26 0x00007fb778cfb04d in clone () from /lib64/libc.so.6
      

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 40m
                40m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.